transdsl/grammar/.antlr/.antlr/TransactionDslParser.java
// Generated from d:\Code\antlr4ts-tutorial\transdsl\grammar\.antlr\TransactionDsl.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TransactionDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, Sync=54, OpNot=55, Ignore=56, Catch=57, ID=58, WS=59, NEWLINE=60, 
		COMMENT=61, LINE_COMMENT=62, NATURAL_NUM=63;
	public static final int
		RULE_transactionFile = 0, RULE_transaction = 1, RULE_procedure = 2, RULE_procedureBody = 3, 
		RULE_sequenceAction = 4, RULE_action = 5, RULE_syncAction = 6, RULE_asyncAction = 7, 
		RULE_optionAction = 8, RULE_procedureAction = 9, RULE_whileAction = 10, 
		RULE_doWhileAction = 11, RULE_receiveAction = 12, RULE_receiveActionItem = 13, 
		RULE_syncReceiveAction = 14, RULE_sendAction = 15, RULE_delayAction = 16, 
		RULE_timer = 17, RULE_optionBranch = 18, RULE_elseBranch = 19, RULE_conditionExpress = 20, 
		RULE_express = 21, RULE_failAction = 22, RULE_failActionSpecificBranch = 23, 
		RULE_failActionDefaultBranch = 24, RULE_finalAction = 25, RULE_msgProcFunction = 26, 
		RULE_syncProcFunction = 27, RULE_msgBuilder = 28, RULE_procFunction = 29, 
		RULE_conditionFunction = 30, RULE_failCondition = 31, RULE_timerDuration = 32, 
		RULE_dispatchFile = 33, RULE_appName = 34, RULE_context = 35, RULE_defTransactionTypes = 36, 
		RULE_emsplusEventIdHeadFile = 37, RULE_confilctPolicyTable = 38, RULE_confilctPolicy = 39, 
		RULE_confilctPolicyItem = 40, RULE_policyType = 41, RULE_newTransactionType = 42, 
		RULE_oldTransactionType = 43, RULE_transactionTypeChecker = 44, RULE_msgBufferPolicyTable = 45, 
		RULE_msgBufferPolicy = 46, RULE_msgBufferPolicyItem = 47, RULE_msgBufferPolicyType = 48, 
		RULE_oldMsgTypeChecker = 49, RULE_newMsgTypeChecker = 50, RULE_bufferedMsgPopPolicyTable = 51, 
		RULE_bufferedMsgPopPolicy = 52, RULE_bufferedMsgPopPolicyType = 53, RULE_bufferedMsgTypeChecker = 54, 
		RULE_msgTypeChecker = 55, RULE_any = 56, RULE_transAttributeTable = 57, 
		RULE_transAttribute = 58, RULE_triggerEventTable = 59, RULE_triggerEvent = 60, 
		RULE_defaultTransactionItem = 61, RULE_tranactionItem = 62, RULE_tranactionItemInfo = 63, 
		RULE_dispatchPreProcFunc = 64, RULE_getConfilctTransactionFunc = 65, RULE_interruptEventTable = 66, 
		RULE_interruptEvent = 67, RULE_getTransacionContextFunc = 68, RULE_transactionId = 69, 
		RULE_transactionTypeGroup = 70, RULE_dispatchScene = 71, RULE_transID = 72, 
		RULE_transName = 73, RULE_emsPlusEventID = 74, RULE_headfile = 75, RULE_identifier = 76, 
		RULE_msg = 77;
	private static String[] makeRuleNames() {
		return new String[] {
			"transactionFile", "transaction", "procedure", "procedureBody", "sequenceAction", 
			"action", "syncAction", "asyncAction", "optionAction", "procedureAction", 
			"whileAction", "doWhileAction", "receiveAction", "receiveActionItem", 
			"syncReceiveAction", "sendAction", "delayAction", "timer", "optionBranch", 
			"elseBranch", "conditionExpress", "express", "failAction", "failActionSpecificBranch", 
			"failActionDefaultBranch", "finalAction", "msgProcFunction", "syncProcFunction", 
			"msgBuilder", "procFunction", "conditionFunction", "failCondition", "timerDuration", 
			"dispatchFile", "appName", "context", "defTransactionTypes", "emsplusEventIdHeadFile", 
			"confilctPolicyTable", "confilctPolicy", "confilctPolicyItem", "policyType", 
			"newTransactionType", "oldTransactionType", "transactionTypeChecker", 
			"msgBufferPolicyTable", "msgBufferPolicy", "msgBufferPolicyItem", "msgBufferPolicyType", 
			"oldMsgTypeChecker", "newMsgTypeChecker", "bufferedMsgPopPolicyTable", 
			"bufferedMsgPopPolicy", "bufferedMsgPopPolicyType", "bufferedMsgTypeChecker", 
			"msgTypeChecker", "any", "transAttributeTable", "transAttribute", "triggerEventTable", 
			"triggerEvent", "defaultTransactionItem", "tranactionItem", "tranactionItemInfo", 
			"dispatchPreProcFunc", "getConfilctTransactionFunc", "interruptEventTable", 
			"interruptEvent", "getTransacionContextFunc", "transactionId", "transactionTypeGroup", 
			"dispatchScene", "transID", "transName", "emsPlusEventID", "headfile", 
			"identifier", "msg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'transaction'", "'procedure'", "'{'", "'}'", "'if'", "'else'", 
			"'call'", "'while'", "'do'", "'receive'", "'send'", "'delay'", "'after'", 
			"'('", "')'", "'fail'", "','", "'finally'", "'app'", "':'", "'context'", 
			"'types'", "'emsplusEventIdHeadFile'", "'conflict'", "'polices'", "'buffer'", 
			"'permanent_buffer'", "'replace'", "'grab'", "'discard'", "'reject'", 
			"'fail_discard'", "'fail_reject'", "'force_replace'", "'resok_goon'", 
			"'buffer_replace'", "'none'", "'msg'", "'merge'", "'buffered'", "'pop'", 
			"'not_pop'", "'any'", "'register'", "'trigger'", "'events'", "'interrupt'", 
			"'type'", "'\"'", "'../'", "'/'", "'.h'", "'.hpp'", "'sync'", "'not'", 
			"'ignore'", "'catch'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Sync", "OpNot", "Ignore", "Catch", 
			"ID", "WS", "NEWLINE", "COMMENT", "LINE_COMMENT", "NATURAL_NUM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TransactionDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TransactionDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TransactionFileContext extends ParserRuleContext {
		public List<TransactionContext> transaction() {
			return getRuleContexts(TransactionContext.class);
		}
		public TransactionContext transaction(int i) {
			return getRuleContext(TransactionContext.class,i);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public TransactionFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transactionFile; }
	}

	public final TransactionFileContext transactionFile() throws RecognitionException {
		TransactionFileContext _localctx = new TransactionFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_transactionFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << NEWLINE))) != 0)) {
				{
				setState(158);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(156);
					transaction();
					}
					break;
				case 2:
					{
					setState(157);
					procedure();
					}
					break;
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransactionContext extends ParserRuleContext {
		public ProcedureBodyContext procedureBody() {
			return getRuleContext(ProcedureBodyContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(TransactionDslParser.NEWLINE, 0); }
		public TransactionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transaction; }
	}

	public final TransactionContext transaction() throws RecognitionException {
		TransactionContext _localctx = new TransactionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_transaction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(163);
				match(NEWLINE);
				}
			}

			setState(166);
			match(T__0);
			setState(167);
			procedureBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public ProcedureBodyContext procedureBody() {
			return getRuleContext(ProcedureBodyContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(TransactionDslParser.NEWLINE, 0); }
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(169);
				match(NEWLINE);
				}
			}

			setState(172);
			match(T__1);
			setState(173);
			procedureBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureBodyContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TransactionDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TransactionDslParser.NEWLINE, i);
		}
		public SequenceActionContext sequenceAction() {
			return getRuleContext(SequenceActionContext.class,0);
		}
		public FailActionContext failAction() {
			return getRuleContext(FailActionContext.class,0);
		}
		public FinalActionContext finalAction() {
			return getRuleContext(FinalActionContext.class,0);
		}
		public ProcedureBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureBody; }
	}

	public final ProcedureBodyContext procedureBody() throws RecognitionException {
		ProcedureBodyContext _localctx = new ProcedureBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedureBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			identifier();
			setState(176);
			match(T__2);
			setState(177);
			match(NEWLINE);
			setState(178);
			sequenceAction();
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(179);
				failAction();
				}
			}

			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(182);
				finalAction();
				}
			}

			setState(185);
			match(T__3);
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(186);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequenceActionContext extends ParserRuleContext {
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public SequenceActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequenceAction; }
	}

	public final SequenceActionContext sequenceAction() throws RecognitionException {
		SequenceActionContext _localctx = new SequenceActionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sequenceAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << Sync) | (1L << Ignore) | (1L << Catch) | (1L << ID))) != 0)) {
				{
				{
				setState(189);
				action();
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public SyncActionContext syncAction() {
			return getRuleContext(SyncActionContext.class,0);
		}
		public ReceiveActionContext receiveAction() {
			return getRuleContext(ReceiveActionContext.class,0);
		}
		public SendActionContext sendAction() {
			return getRuleContext(SendActionContext.class,0);
		}
		public DelayActionContext delayAction() {
			return getRuleContext(DelayActionContext.class,0);
		}
		public SyncReceiveActionContext syncReceiveAction() {
			return getRuleContext(SyncReceiveActionContext.class,0);
		}
		public AsyncActionContext asyncAction() {
			return getRuleContext(AsyncActionContext.class,0);
		}
		public OptionActionContext optionAction() {
			return getRuleContext(OptionActionContext.class,0);
		}
		public ProcedureActionContext procedureAction() {
			return getRuleContext(ProcedureActionContext.class,0);
		}
		public WhileActionContext whileAction() {
			return getRuleContext(WhileActionContext.class,0);
		}
		public DoWhileActionContext doWhileAction() {
			return getRuleContext(DoWhileActionContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(195);
				syncAction();
				}
				break;
			case 2:
				{
				setState(196);
				receiveAction();
				}
				break;
			case 3:
				{
				setState(197);
				sendAction();
				}
				break;
			case 4:
				{
				setState(198);
				delayAction();
				}
				break;
			case 5:
				{
				setState(199);
				syncReceiveAction();
				}
				break;
			case 6:
				{
				setState(200);
				asyncAction();
				}
				break;
			case 7:
				{
				setState(201);
				optionAction();
				}
				break;
			case 8:
				{
				setState(202);
				procedureAction();
				}
				break;
			case 9:
				{
				setState(203);
				whileAction();
				}
				break;
			case 10:
				{
				setState(204);
				doWhileAction();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyncActionContext extends ParserRuleContext {
		public SyncProcFunctionContext syncProcFunction() {
			return getRuleContext(SyncProcFunctionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(TransactionDslParser.NEWLINE, 0); }
		public TerminalNode Ignore() { return getToken(TransactionDslParser.Ignore, 0); }
		public TerminalNode Catch() { return getToken(TransactionDslParser.Catch, 0); }
		public SyncActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syncAction; }
	}

	public final SyncActionContext syncAction() throws RecognitionException {
		SyncActionContext _localctx = new SyncActionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_syncAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Ignore || _la==Catch) {
				{
				setState(207);
				_la = _input.LA(1);
				if ( !(_la==Ignore || _la==Catch) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(210);
			syncProcFunction();
			setState(211);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsyncActionContext extends ParserRuleContext {
		public SyncProcFunctionContext syncProcFunction() {
			return getRuleContext(SyncProcFunctionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TransactionDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TransactionDslParser.NEWLINE, i);
		}
		public ReceiveActionContext receiveAction() {
			return getRuleContext(ReceiveActionContext.class,0);
		}
		public TerminalNode Ignore() { return getToken(TransactionDslParser.Ignore, 0); }
		public TerminalNode Catch() { return getToken(TransactionDslParser.Catch, 0); }
		public AsyncActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asyncAction; }
	}

	public final AsyncActionContext asyncAction() throws RecognitionException {
		AsyncActionContext _localctx = new AsyncActionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asyncAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Ignore || _la==Catch) {
				{
				setState(213);
				_la = _input.LA(1);
				if ( !(_la==Ignore || _la==Catch) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(216);
			syncProcFunction();
			setState(217);
			match(T__2);
			setState(218);
			match(NEWLINE);
			setState(219);
			receiveAction();
			setState(220);
			match(T__3);
			setState(221);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionActionContext extends ParserRuleContext {
		public List<OptionBranchContext> optionBranch() {
			return getRuleContexts(OptionBranchContext.class);
		}
		public OptionBranchContext optionBranch(int i) {
			return getRuleContext(OptionBranchContext.class,i);
		}
		public ElseBranchContext elseBranch() {
			return getRuleContext(ElseBranchContext.class,0);
		}
		public OptionActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionAction; }
	}

	public final OptionActionContext optionAction() throws RecognitionException {
		OptionActionContext _localctx = new OptionActionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_optionAction);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(T__4);
			setState(224);
			optionBranch();
			setState(230);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(225);
					match(T__5);
					setState(226);
					match(T__4);
					setState(227);
					optionBranch();
					}
					} 
				}
				setState(232);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(235);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(233);
				match(T__5);
				setState(234);
				elseBranch();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureActionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(TransactionDslParser.NEWLINE, 0); }
		public TerminalNode Ignore() { return getToken(TransactionDslParser.Ignore, 0); }
		public TerminalNode Catch() { return getToken(TransactionDslParser.Catch, 0); }
		public ProcedureActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureAction; }
	}

	public final ProcedureActionContext procedureAction() throws RecognitionException {
		ProcedureActionContext _localctx = new ProcedureActionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_procedureAction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Ignore || _la==Catch) {
				{
				setState(237);
				_la = _input.LA(1);
				if ( !(_la==Ignore || _la==Catch) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(240);
			match(T__6);
			setState(241);
			identifier();
			setState(242);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileActionContext extends ParserRuleContext {
		public ConditionExpressContext conditionExpress() {
			return getRuleContext(ConditionExpressContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(TransactionDslParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(TransactionDslParser.NEWLINE, i);
		}
		public SequenceActionContext sequenceAction() {
			return getRuleContext(SequenceActionContext.class,0);
		}
		public WhileActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileAction; }
	}

	public final WhileActionContext whileAction() throws RecognitionException {
		WhileActionContext _localctx = new WhileActionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileAction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(244);
			match(T__7);
			setState(245);
			conditionExpress();
			setState(246);
			match(T__2);
			setState(247);
			match(NEWLINE);
			setState(248);
			sequenceAction();
			setState(249);
			match(T__3);
			setState(250);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
